--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>
-			Elon Wif Kobasu
+			Elon Wif KABOSU
 		</title>
 		<!-- Modal CSS -->
 		<style type="text/css">
@@ -121,7 +121,7 @@
 			  <audio
 				style="opacity: 1"
 				id="closingAudio"
-				src="./assets/images/titanic.jpg"
+				src="./assets/images/rip.mp3"
 			  ></audio>
 			  <script>
 				window.onload = function () {
@@ -165,12 +165,12 @@
 							<div class="col-lg-5 mb-2 mb-lg-0">
 								<div class="t-area">
 									<h2>
-										WELCOME TO <br> ELON WIF KOBASU
+										WELCOME TO <br> ELON WIF KABOSU
 									</h2>
 									<a href="buytlink" class="btn by-btn" target="_blank">BUY HERE</a>
 									<ul>
-										<li><a href="https://x.com/elonwifkabosu" target="_blank"><img src="assets/images/icon01.png" alt=""></a></li>
-										<li><a href="https://t.me/elonwifkabosu" target="_blank"><img src="assets/images/icon03.png" alt=""></a></li>
+										<li><a href="https://x.com/elonwifKABOSU" target="_blank"><img src="assets/images/icon01.png" alt=""></a></li>
+										<li><a href="https://t.me/elonwifKABOSU" target="_blank"><img src="assets/images/icon03.png" alt=""></a></li>
 										<li><a href="chartlink" target="_blank"><img src="assets/images/icon04.png" alt=""></a></li>
 									</ul>
 									<ul>
@@ -201,19 +201,19 @@
 										<h2>REST IN PEACE </h2>
 									</div>
 									<div>
-										<h2>KOBASU</h2>
+										<h2>KABOSU</h2>
 									</div>
 									<div>
 										<h2>REST IN PEACE</h2>
 									</div>
 									<div>
-										<h2>KOBASU</h2>
+										<h2>KABOSU</h2>
 									</div>
 									<div>
 										<h2>REST IN PEACE</h2>
 									</div>
 									<div>
-										<h2>KOBASU</h2>
+										<h2>KABOSU</h2>
 									</div>
 									<div>
 										<h2>REST IN PEACE</h2>
@@ -235,14 +235,14 @@
 								<div class="a-text">
 									<h2>About</h2>
 									<p>
-										To the moon with memes! Meet "Elon with Kobasu," the ultimate token tribute to the meme legends: Elon Musk and Kabosu, the iconic Doge doge. Kabosu may have gone to meme heaven, but 
+										To the moon with memes! Meet "Elon with KABOSU," the ultimate token tribute to the meme legends: Elon Musk and KABOSU, the iconic Doge doge. KABOSU may have gone to meme heaven, but 
 									</p>
 									<a href="chartlink" class="d-btn btn" target="_blank">her legacy lives on in every trade</a>
 									<p>
 										 Join us and let's send this token to the stars! Much wow, very crypto.
 									</p>
 									<p>	
-										Elon wif kobasu
+										Elon wif KABOSU
 									</p>
 								</div>
 							</div>
@@ -341,14 +341,14 @@
 				<div class="container-fluid">
 					<div class="row align-items-center">
 						<div class="col-lg-6">
-							<h2>elon wif kobasu</h2>
+							<h2>elon wif KABOSU</h2>
 							<p>$EWK is a memecoin with no intrinsic value or expectation of financial return. The coin is for entertainment purposes only.</p>
 							</br><p>2024 ALL RIGHTS RESERVED</p>
 						</div>
 						<div class="col-lg-6">
 							<ul>
-								<li><a href="https://x.com/elonwifkabosu" target="_blank"><img src="assets/images/icon09.png" alt=""></a></li>
-								<li><a href="https://t.me/elonwifkabosu" target="_blank"><img src="assets/images/icon11.png" alt=""></a></li>
+								<li><a href="https://x.com/elonwifKABOSU" target="_blank"><img src="assets/images/icon09.png" alt=""></a></li>
+								<li><a href="https://t.me/elonwifKABOSU" target="_blank"><img src="assets/images/icon11.png" alt=""></a></li>
 								<li><a href="chartlink" target="_blank"><img src="assets/images/icon12.png" alt=""></a></li>
 								<li><a href="sacntlink" target="_blank"><img style="    max-width: 58px;border-radius: 10px;
 									" src="assets/images/download.png" alt=""></a></li>
