--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 									<h2>
 										WELCOME TO <br> ELON WIF KABOSU
 									</h2>
-									<a href="buytlink" class="btn by-btn" target="_blank">BUY HERE</a>
+									<a href="https://pump.fun/6RA6PfxwxtSuMH4zs5a1ZVrjqc1vMbkV2VXGX24yEJrr" class="btn by-btn" target="_blank">BUY HERE</a>
 									<ul>
 										<li><a href="https://x.com/elonwifKABOSU" target="_blank"><img src="assets/images/icon01.png" alt=""></a></li>
 										<li><a href="https://t.me/elonwifKABOSU" target="_blank"><img src="assets/images/icon03.png" alt=""></a></li>
@@ -176,7 +176,7 @@
 									<ul>
 										<li><a href="sacntlink" target="_blank"><img style="    max-width: 120px;border-radius: 10px;
 											" src="assets/images/download.png" alt=""></a></li>
-										<li><a href="buylink" target="_blank"><img style="    max-width: 120px;border-radius: 10px;
+										<li><a href="https://pump.fun/6RA6PfxwxtSuMH4zs5a1ZVrjqc1vMbkV2VXGX24yEJrr" target="_blank"><img style="    max-width: 120px;border-radius: 10px;
 											" src="assets/images/images20.png" alt=""></a></li>
 									</ul>
 								</div>
@@ -317,17 +317,17 @@
 								<div class="add-area">
 									<h3>$EWK contract address:</h3>
 									<div class="bar d-none d-sm-flex">
-										<h4 style="font-size: 24px;">xxxxxxxxxxxxxxxxxxxxxxxx</h4>
+										<h4 style="font-size: 24px;">6RA6PfxwxtSuMH4zs5a1ZVrjqc1vMbkV2VXGX24yEJrr</h4>
 										<button onclick="copyText()" type="button"><img src="assets/images/icon08.png" alt=""></button>
 									</div>
 									<div class="bar d-sm-none">
-										<h4>xxxxxxxxxxxxxxxxxxxxxxxx</h4>
+										<h4>6RA6PfxwxtSuMH4zs5a1ZVrjqc1vMbkV2VXGX24yEJrr</h4>
 										<button onclick="copyText()" type="button"><img src="assets/images/icon08.png" alt=""></button>
 										<script>
 											function copyText(){
 												/* Copy text into clipboard */
 												navigator.clipboard.writeText
-													("xxxxxxxxxxxxxxxxxxxxxxxx");
+													("6RA6PfxwxtSuMH4zs5a1ZVrjqc1vMbkV2VXGX24yEJrr");
 											}
 										</script>
 									</div>
